devscripts (2.9.6) UNRELEASED; urgency=low

  * bts: tags: revert change in 2.9: reinstate "fixed-in-experimental" (it
    still appears to be in use) and don't need "help" twice

 -- Julian Gilbey <jdg@debian.org>  Wed, 17 Aug 2005 19:30:08 +0100

devscripts (2.9.5) unstable; urgency=low

  [ Joey Hess ]
  * bts: Make block command accept "by" or "with" after the blocked bug,
    but do not make either mandatory.
  * debcommit: try to add support for svk

  [ Julian Gilbey ]
  * bts: fix clone command (Closes: #321798)
  * debchange: add comment to manpage about building sponsored uploads
    (Closes: #321960)
  * debchange: introduce --create option: allows creation of changelogs /
    NEWS files (Closes: #220755, #322716), and inform user about this
    option if changelog / NEWS file is not found (Closes: #316661)
  * debchange: allow option (--nomultimaint) to not use this
    multi-maintainer changelog format
  * debsign: fix noecho behaviour for interrupted gpg call (Closes:
    #321684)
  * uscan: --report actually reports useful information (Closes: #313323)
  * wnpp-alert: RFA -> RFH (Closes: #321707)

  [ Joey Hess ]
  * bts: Deal with recent bts changes in html munging code.

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 12:08:09 -0400

devscripts (2.9.4) unstable; urgency=low

  [ Julian Gilbey ]
  * bts: fix forwarded command (Closes: #320703)
  * debchange: un-html-ise bug titles when using --closes

  [ Joey Hess ]
  * bts: Support new block and unblock commands.

 -- Joey Hess <joeyh@debian.org>  Wed,  3 Aug 2005 22:13:47 -0400

devscripts (2.9.3) unstable; urgency=low

  [ Filippo Giunchedi ]
  * added deb-reversion by martin f krafft (Closes: #284642)
  * modified Makefile to handle docbook-generated manpages and build-depend on
    xsltproc + docbook-xsl

  [ Joey Hess ]
  * Fix suggests on subversion.
  * Other cleanups to references to revision control programs.

  [ Joshua Kwan ]