@@ -2,8 +2,10 @@ devscripts (2.9.6) UNRELEASED; urgency=low
 
   * bts: tags: revert change in 2.9: reinstate "fixed-in-experimental" (it
     still appears to be in use) and don't need "help" twice
+  * uscan: report on package being scanned when --report is used (Closes:
+    #324102)
 
- -- Julian Gilbey <jdg@debian.org>  Wed, 17 Aug 2005 19:30:08 +0100
+ -- Julian Gilbey <jdg@debian.org>  Sat, 20 Aug 2005 23:20:05 +0100
 
 devscripts (2.9.5) unstable; urgency=low
 
